Revert UrlBuilder change